--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
     "react-maskinput": "^2.0.1",
     "react-redux": "^7.2.0",
     "react-redux-toastr": "^7.6.5",
